2006-07-14	kaffeetisch

	* Glib.pm, NEWS, README, copyright.pod: Unstable release 1.130.

2006-07-14	kaffeetisch

	* MakeHelper.pm: Turn a few 'use Config's into 'require Config's.
	Also remove some loud MSVC/nmake bashing. :-)

2006-06-20  Emmanuele Bassi  <ebassi@gmail.com>

	A GBookmarkFile.xs
	A t/h.t

	* GBookmarkFile.xs: Bind GBookmarkFile, a parser for desktop
	bookmarks, that comes with GLib 2.11/2.12.

	* t/h.t: Test suite for Glib::BookmarkFile.

	* GError.xs:
	* Glib.xs:
	* MANIFEST:
	* Makefile.PL:
	* doctypes:
	* gperl-gtypes.[hc]:
	* gperl.h:
	* typemap: Build glue for Glib::BookmarkFile.

	* Makefile.PL:
	* Glib.pm: Update $VERSION to 1.130 and warn the user.

2006/06/19	kaffeetisch

	* GKeyFile.xs, t/g.t: Bind and test g_key_file_set_double,
	g_key_file_get_double, g_key_file_set_double_list, and
	g_key_file_get_double_list.  Fix a few API doc glitches.

2006/06/19	kaffeetisch

	* GObject.xs: Register GInitiallyUnowned as
	Glib::InitiallyUnowned.

2006/05/21	kaffeetisch

	* GObject.xs (class_info_finish_loading): Free the list returned
	by g_type_interfaces when we're finished with it.

2006/03/12	kaffeetisch

	* Glib.pm, Makefile.PL, NEWS, README: Stable release 1.120.

2006/03/06	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.118.

2006/03/04	kaffeetisch

	* gperl-private.h, MANIFEST: Add a new header file for private
	functions that are used in more than one xs file.  For now these
	are _gperl_sv_from_value_internal, _gperl_fetch_wrapper_key, and
	some new threading-safety stuff described below.

	* Glib.xs, gperl-private.h: Add _gperl_set_master_interp and
	_gperl_get_master_interp to get and set a global master
	interpreter that can be used to setup perl's thread-local storage.
	For convenience, the new macro GPERL_SET_CONTEXT encapsulates this
	setup step.  Inspired by Dobrica Pavlinusic's approach in the Fuse
	module.

	* Glib.xs: Call _gperl_set_master_interp in BOOT to set the global